# cc-autopilot

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  STRUCTURE.md  pyproject.toml  verify.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml
agentcron/: __init__.py  __main__.py  cli.py  config.py  notify.py  runner.py  scheduler.py
docs/: RELEASE_CHECKLIST.md  architecture.md  first-contribution-case-study.md  index.md  notifications.md  recipes.md
examples/: agentcron.json  changelog.txt  code_review.txt  daily_summary.txt  error_digest.txt  jobs.json  run_daily_summary.bat  weekly_report.txt
src/: cron_status.py  health_check.ps1  run.ps1  run_hidden.vbs
tests/: test_agentcron.py  test_crontab_merge.py
tests/fixtures/crontab/: existing_marker.crontab  other_jobs.crontab  unrelated.crontab
