[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcron"
version = "0.2.0"
description = "A reliability layer for scheduled AI coding agents."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "shkyyy18"}]
keywords = ["ai-agent", "codex", "claude-code", "automation", "scheduler", "watchdog"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Programming Language :: Python :: 3",
]

[project.scripts]
agentcron = "agentcron.cli:main"

[project.urls]
Homepage = "https://github.com/shkyyy18/cc-autopilot"
Issues = "https://github.com/shkyyy18/cc-autopilot/issues"

[tool.setuptools.packages.find]
include = ["agentcron*"]
